# Vectrex_RL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Env/: Untitled.ipynb
environment/: CMakeLists.txt  ROM.hpp  action.cpp  action.hpp  environment.cpp  environment.hpp  image.cpp  image.hpp  main.cpp
environment/games/: ROM.cpp  ROM.hpp  frog_jump.cpp  frog_jump.hpp  games.hpp  roms.hpp  unsupported_rom.hpp
example/cpp-interface/: CMakeLists.txt  test_vecx_rl.cpp
example/python-interface/: test_pyvecx_rl.py
libs/: CMakeLists.txt
python/: CMakeLists.txt  pybind_vecx_rl.cpp
train/: FrogEnv.py  testModel.py  trainEnv.py
train/logs/DQN/: events.out.tfevents.1668772975.DESKTOP-SJCKGVI.2684.1  events.out.tfevents.1668773697.DESKTOP-SJCKGVI.2684.2  events.out.tfevents.1668774585.DESKTOP-SJCKGVI.2684.3  events.out.tfevents.1668775674.DESKTOP-SJCKGVI.2684.4  events.out.tfevents.1668777555.DESKTOP-SJCKGVI.2684.6  events.out.tfevents.1668778397.DESKTOP-SJCKGVI.2684.7  events.out.tfevents.1668780392.DESKTOP-SJCKGVI.2684.9  events.out.tfevents.1668781213.DESKTOP-SJCKGVI.2684.10  events.out.tfevents.1668782706.DESKTOP-SJCKGVI.2684.12  events.out.tfevents.1668783393.DESKTOP-SJCKGVI.2684.13  events.out.tfevents.1668784082.DESKTOP-SJCKGVI.2684.14  events.out.tfevents.1668784777.DESKTOP-SJCKGVI.2684.15  events.out.tfevents.1668786273.DESKTOP-SJCKGVI.2684.17  events.out.tfevents.1668787025.DESKTOP-SJCKGVI.2684.18  events.out.tfevents.1668789379.DESKTOP-SJCKGVI.2684.21  events.out.tfevents.1668790181.DESKTOP-SJCKGVI.2684.22  events.out.tfevents.1668793786.DESKTOP-SJCKGVI.2684.26  events.out.tfevents.1668795293.DESKTOP-SJCKGVI.1111.0  events.out.tfevents.1668798036.DESKTOP-SJCKGVI.1111.4  events.out.tfevents.1668798699.DESKTOP-SJCKGVI.1111.5  events.out.tfevents.1668800023.DESKTOP-SJCKGVI.1111.7  events.out.tfevents.1668802679.DESKTOP-SJCKGVI.1111.11  events.out.tfevents.1668803336.DESKTOP-SJCKGVI.1111.12  events.out.tfevents.1668806641.DESKTOP-SJCKGVI.1111.17  events.out.tfevents.1668807296.DESKTOP-SJCKGVI.1111.18  events.out.tfevents.1668813788.DESKTOP-SJCKGVI.1111.27  events.out.tfevents.1668815205.DESKTOP-SJCKGVI.1111.29  events.out.tfevents.1668816560.DESKTOP-SJCKGVI.1111.31  events.out.tfevents.1668817952.DESKTOP-SJCKGVI.1111.33  events.out.tfevents.1668819323.DESKTOP-SJCKGVI.1111.35  events.out.tfevents.1668820723.DESKTOP-SJCKGVI.1111.37  events.out.tfevents.1668821418.DESKTOP-SJCKGVI.1111.38  events.out.tfevents.1668822132.DESKTOP-SJCKGVI.1111.39  events.out.tfevents.1668822840.DESKTOP-SJCKGVI.1111.40  events.out.tfevents.1668824275.DESKTOP-SJCKGVI.1111.42  events.out.tfevents.1668829237.DESKTOP-SJCKGVI.1111.49  events.out.tfevents.1668830686.DESKTOP-SJCKGVI.1111.51  events.out.tfevents.1668831449.DESKTOP-SJCKGVI.1111.52  events.out.tfevents.1668834264.DESKTOP-SJCKGVI.1111.56  events.out.tfevents.1668834958.DESKTOP-SJCKGVI.1111.57  (+29 more)
train/logs/PPO/: events.out.tfevents.1668947789.DESKTOP-SJCKGVI.4895.2  events.out.tfevents.1668954481.DESKTOP-SJCKGVI.4895.10  events.out.tfevents.1668955136.DESKTOP-SJCKGVI.4895.11  events.out.tfevents.1668955907.DESKTOP-SJCKGVI.4895.12  events.out.tfevents.1668956777.DESKTOP-SJCKGVI.4895.13  events.out.tfevents.1668958482.DESKTOP-SJCKGVI.4895.15  events.out.tfevents.1668960284.DESKTOP-SJCKGVI.4895.17  events.out.tfevents.1668962606.DESKTOP-SJCKGVI.4895.20  events.out.tfevents.1668963412.DESKTOP-SJCKGVI.4895.21  events.out.tfevents.1668964984.DESKTOP-SJCKGVI.4895.23  (+59 more)
vecx/: CMakeLists.txt  Makefile  display.c  display.h  osint.c  osint.h  periphery.h  type_definitions.h  vecx  vecx.c  vecx.h
vecx/Vectrex_ROMS/: 3-D Crazy Coaster (1983).7z  3-D Mine Storm (1983).7z  3-D Narrow Escape (1983).7z  All Good Things by John Dondzila (1996).7z  Animaction (1983).7z  Armor Attack (1982).7z  Art Master (1983).7z  Bedlam (1983).7z  Berzerk (1982).7z  Birds of Prey by John Dondzila (1999).7z  Blitz! - Action Football (1982).7z  Clean Sweep (1982).7z  Cosmic Chasm (1982).7z  Dark Tower (1983).7z  Engine Analyzer (1983).7z  Exec Rom Dumper (2000) (Ronen Habot).7z  Fortress of Narzod (1982).7z  Gravitrex by John Dondzila (2002).7z  Heads Up - Action Soccer (1983).7z  Hyperchase (1982).7z  Melody Master (1983).7z  Mine Storm (1982).7z  Mine Storm II (1983).7z  Nona3 by Manu (Mar 10) (2003).7z  Patriots III - BALListics Busters by John Dondzila (1996-2002).7z  Patriots Remix by John Dondzila (1999).7z  Patriots by John Dondzila (1996).7z  Polar Rescue (1983).7z  Pole Position (1982).7z  Public Domain (Chris Salomon).7z  Public Domain (Christopher Tumber).7z  Public Domain (Jeff Woolsey).7z  Public Domain (Manu).7z  Public Domain.7z  Repulse by John Dondzila (1999).7z  Rip-Off (1982).7z  Rockaroids Remix - 3rd Rock by John Dondzila (1996).7z  Ronen's Game Cart (2000) (Ronen Habot).7z  Scorefont 3 by Manu (Aug 26) (2002).7z  Scramble (1982).7z  (+21 more)
vecx/Vectrex_ROMS/3-D Crazy Coaster (1983)/: 3-D Crazy Coaster (1983) [b1].vec  3-D Crazy Coaster (1983) [b2].vec
vecx/Vectrex_ROMS/3-D Mine Storm (1983)/: 3-D Mine Storm (1983) [b1].vec
vecx/Vectrex_ROMS/Animaction_1983/: Animaction (1983) (light pen) [b1].vec
(+130 files in other folders)
